# dojo

./: .gitignore  Config.hs  LICENSE  Main.hs  Makefile  Readme.md  dojo.cabal  hie.yaml
Dojo/: Base.hs  Chrome.hs  Framework.hs  Paths.hs
Dojo/Data/: Attendance.hs  Event.hs  Person.hs  User.hs
Dojo/Data/Event/: Base.hs  Database.hs  Presentation.hs
Dojo/Data/Person/: Base.hs  Database.hs
Dojo/Data/Session/: Database.hs
Dojo/Data/User/: Base.hs
Dojo/Framework/: Form.hs  Parse.hs  Pretty.hs
Dojo/Node/: EventEdit.hs  EventList.hs  EventView.hs  Login.hs  Logout.hs  PersonAdd.hs  PersonEdit.hs  PersonList.hs  PersonView.hs
Dojo/Node/EventEdit/: Arg.hs  Form.hs
Dojo/Node/PersonEdit/: Form.hs
data/: Create.sql  create-person.sql  dojo-style.css  index.html  insert-DimDay.sql
data/latex/class/: main.tex
data/latex/person/section/: intro.tex
doc/: Setup.md
doc/latex/: main.tex
doc/latex-student-reg/: main.tex
doc/latex-student-reg/figure/: qr-student-ident.tex
doc/latex-student-reg/section/: code.tex  intro.tex
doc/latex/content/: Student.tex
doc/latex/section/: intro.tex
doc/queries/: class.sql  members.sql
doc/setup/: Debug.md
doc/usage/: Readme.rst
src/dojo/: Config-template.hs  Main.hs
src/dojo/Dojo/: Base.hs  Chrome.hs  Config.hs  Data.hs  Fail.hs  Framework.hs  Log.hs  Paths.hs  Trivia.hs
src/dojo/Dojo/Data/: Attendance.hs  Class.hs  Dojo.hs  Event.hs  Person.hs  Session.hs  User.hs
src/dojo/Dojo/Data/Class/: Base.hs  Database.hs  Registration.hs
src/dojo/Dojo/Data/Dojo/: Database.hs
src/dojo/Dojo/Data/Event/: Base.hs  Database.hs  Presentation.hs
src/dojo/Dojo/Data/Person/: Base.hs  Database.hs  Presentation.hs  Search.hs
src/dojo/Dojo/Data/Session/: Base.hs  Database.hs
src/dojo/Dojo/Data/User/: Base.hs  Database.hs
src/dojo/Dojo/Framework/: Entity.hs  Form.hs  Lens.hs  Parse.hs  Path.hs  Pretty.hs  QRCode.hs  Random.hs  Value.hs
src/dojo/Dojo/Mode/: BuildDevRegs.hs  ListPeople.hs
src/dojo/Dojo/Node/: ClassDevLink.hs  ClassDevReg.hs  ClassEvents.hs  ClassList.hs  ClassRegulars.hs  ClassView.hs  EventDel.hs  EventEdit.hs  EventEditAttend.hs  EventEditDetails.hs  EventList.hs  EventView.hs  Login.hs  Logout.hs  Main.hs  PersonDel.hs  PersonDevLink.hs  PersonDevStatus.hs  PersonEdit.hs  PersonList.hs  PersonRegCode.hs  PersonView.hs  Register.hs
src/dojo/Dojo/Node/EventEdit/: Arg.hs  Base.hs  Details.hs  Feed.hs  Form.hs  FormAttend.hs  FormDetails.hs  Search.hs
src/dojo/Dojo/Node/PersonEdit/: Arg.hs  Form.hs
src/dojo/Dojo/Trivia/: Base.hs  Convertible.hs  Parse.hs  Pretty.hs  ToValue.hs
src/load/: Main.hs
