Name:           dojo
Version:        0.1.0.0
License:        MIT
License-file:   LICENSE
Author:         The Aiki Dojo Strike Force
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Synopsis:       Aiki Dojo Web App

Executable dojo
  build-depends:
        base            == 4.11.*,
        bytestring      == 0.10.*,
        random          == 1.1.*,
        time            == 1.8.*,
        pureMD5         == 2.1.*,
        convertible     == 1.1.*,
        blaze-html      == 0.9.*,
        blaze-markup    == 0.8.*,
        containers      == 0.5.*,
        cgi             == 3001.5.*,
        HDBC            == 2.4.*,
        HDBC-sqlite3    == 2.3.*,
        exceptions      == 0.10.*


  main-is:
        Main.hs

  hs-source-dirs: src/dojo

  other-modules:
        Dojo.Data.Attendance

        Dojo.Data.Class.Base
        Dojo.Data.Class.Database
        Dojo.Data.Class

        Dojo.Data.Dojo.Database
        Dojo.Data.Dojo

        Dojo.Data.Event.Base
        Dojo.Data.Event.Presentation
        Dojo.Data.Event.Database
        Dojo.Data.Event

        Dojo.Data.Person.Base
        Dojo.Data.Person.Search
        Dojo.Data.Person.Database
        Dojo.Data.Person

        Dojo.Data.Session.Base
        Dojo.Data.Session.Database
        Dojo.Data.Session

        Dojo.Data.User.Base
        Dojo.Data.User.Database
        Dojo.Data.User

        Dojo.Trivia.Base
        Dojo.Trivia.Convertible
        Dojo.Trivia.Parse
        Dojo.Trivia.Pretty
        Dojo.Trivia

        Dojo.Framework.Lens
        Dojo.Framework.Path
        Dojo.Framework.Pretty
        Dojo.Framework.Parse
        Dojo.Framework.Form
        Dojo.Framework.Entity
        Dojo.Framework

        Dojo.Node.Main
        Dojo.Node.PersonEdit.Form
        Dojo.Node.PersonEdit
        Dojo.Node.PersonView
        Dojo.Node.PersonList

        Dojo.Node.EventEdit.Arg
        Dojo.Node.EventEdit.Form
        Dojo.Node.EventEdit.Feed

        Dojo.Node.EventList
        Dojo.Node.EventView
        Dojo.Node.EventEdit

        Dojo.Node.ClassList
        Dojo.Node.ClassView

        Dojo.Node.Login
        Dojo.Node.Logout

        Dojo.Chrome

        Dojo.Base
        Dojo.Fail
        Dojo.Framework
        Dojo.Paths

        Config

  ghc-options:
        -Wall
        -fno-warn-orphans
        -fno-warn-missing-signatures
        -fno-warn-unused-do-bind

  extensions:
        BangPatterns
        PatternGuards
        ParallelListComp
        OverloadedStrings
        TypeSynonymInstances
        FlexibleInstances
        MultiParamTypeClasses
        ScopedTypeVariables
        FlexibleContexts
        MultiWayIf
        EmptyDataDecls
        TypeApplications
        ExplicitForAll

Executable load
  build-depends:
        base            == 4.11.*,
        bytestring      == 0.10.*,
        csv             == 0.1.*

  main-is:
        Main.hs

  hs-source-dirs: src/load

  ghc-options:
        -Wall
        -fno-warn-orphans
        -fno-warn-missing-signatures
        -fno-warn-unused-do-bind

  extensions:
        BangPatterns
        PatternGuards
        ParallelListComp
        OverloadedStrings
        TypeSynonymInstances
        FlexibleInstances
        MultiParamTypeClasses
        ScopedTypeVariables
        FlexibleContexts
        MultiWayIf
        TypeApplications
        ExplicitForAll
